--- a/package.json
+++ b/package.json
@@ -7,14 +7,33 @@
     "test": "jest"
   },
   "dependencies": {
-    "mobx": "^5.1.2",
+    "babel-plugin-syntax-decorators": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-react-native": "1.9.1",
+    "fbemitter": "^2.1.1",
+    "md5": "^2.2.1",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
+    "moment": "^2.18.1",
+    "npm-lifecycle": "^2.1.0",
+    "prop-types": "^15.6.1",
     "react": "16.4.1",
     "react-native": "0.55.4",
-    "react-navigation": "^2.14.2"
+    "react-navigation": "^2.14.2",
+    "react-subscribe": "^1.2.3",
+    "urijs": "^1.18.12",
+    "xn-rpc": "git+http://gitlab3.xiniunet.com/modules/xn-rpc.git"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-jest": "23.4.2",
+    "babel-plugin-import": "^1.6.7",
     "babel-preset-react-native": "^2.1.0",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "jest": "23.5.0",
     "react-test-renderer": "16.4.1"
   },
